--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webassemble",
   "description": "Utilize modules-webmake to auto bundle all CommonJS/Node.js pacckages for web browser",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "homepage": "https://github.com/kenspirit/webassemble",
   "author": {
     "name": "Ken Chen",
@@ -32,11 +32,12 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "webmake": "0.3.14",
+    "webmake": "0.3.17",
     "esprima": "1.0.2",
     "optimist": "0.3.5",
     "es5-ext": "0.9.x",
-    "fs2": "0.1.x"
+    "fs2": "0.1.5",
+    "deferred": "0.6.4"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.1.1",
