--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webassemble",
   "description": "Utilize modules-webmake to auto bundle all CommonJS/Node.js pacckages for web browser",
-  "version": "0.1.5",
+  "version": "0.2.0",
   "homepage": "https://github.com/kenspirit/webassemble",
   "author": {
     "name": "Ken Chen",
@@ -33,21 +33,21 @@
   },
   "dependencies": {
     "webmake": "0.3.17",
-    "esprima": "1.0.2",
-    "optimist": "0.3.5",
-    "es5-ext": "0.9.x",
-    "fs2": "0.1.5",
-    "deferred": "0.6.4"
+    "deferred": "^0.7.5",
+    "es5-ext": "^0.10.11",
+    "esprima": "~2.7.2",
+    "fs2": "~0.2.3",
+    "optimist": "0.3.5"
   },
   "devDependencies": {
-    "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt-cli": "~0.1",
-    "grunt": "~0.4.0"
+    "grunt-contrib-jshint": "~1.0.0",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-nodeunit": "~1.0.0",
+    "grunt-cli": "~1.0.0",
+    "grunt": "~1.0.0"
   },
   "peerDependencies": {
-    "grunt": ">=0.4.0"
+    "grunt": ">=1.0.0"
   },
   "keywords": [
     "webmake",
